src/objects/Lab_Records__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lab Records</relationshipLabel>
        <relationshipName>Lab_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_of_Test__c</fullName>
        <label>Date of Test</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lab_Record_ID__c</fullName>
        <label>Lab Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <label>Member ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks_from_Lab__c</fullName>
        <label>Remarks from Lab</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_Date__c</fullName>
        <label>Result Date</label>
        <type>DateTime</type>
    </fields>
    <label>Lab Records</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lab Records Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lab Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>